--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,8 @@
 {
     "compilerOptions": {
+        "target": "es2020",
+        "moduleResolution": "nodenext",
+        "module": "nodenext",
         "paths": {
             "@/*": ["./src/*"]
         }
