--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
+    "@react-email/components": "^0.1.1",
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.15.0",
     "next": "15.3.2",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
-    "resend": "^4.5.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
