--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@eslint/eslintrc": "^3",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "24.0.7",
+    "@types/react": "19.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4"
